# web-sw-cor24-ocaml

./: .gitignore  CHANGES.md  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  build.rs  index.html
.agentrail/: instruction-lock.toml  plan.md  saga.toml
asm/: pvm.s
assets/: ocaml.p24m
docs/: ai_agent_instructions.md  demos.md  multiple-file-demos-plan.md
examples/: canonical-fact.ml  canonical-fib.ml  canonical-lambda-app.ml  canonical-let-in.ml  canonical-list-filter.ml  canonical-list-fold-left.ml  canonical-list-map.ml  canonical-match-int.ml  canonical-print-length.ml  canonical-safe-div.ml  canonical-string-concat.ml  canonical-swap.ml  canonical-when-guard.ml  echo-loop.ml  factorial.ml  function-form-let.ml  function-keyword.ml  function-pattern-args.ml  functions.ml  guess.ml  higher-order-lists.ml  led-blink.ml  led-toggle.ml  let-destructure.ml  list-module.ml  lists-pairs-demo.ml  lists.ml  modules.ml  multi-arg.ml  named-adts.ml  options.ml  pairs.ml  patterns.ml  print.ml  repl-session.ml  sequencing.ml  string-conversion.ml  string-equality.ml  string-escapes.ml  strings.ml  (+6 more)
pages/: index.html  ui-a79de25994671dcd.css  ui-e1a165f33e7d0afb.css  web-sw-cor24-ocaml-14f10ff397324568_bg.wasm  web-sw-cor24-ocaml-20ab99da607e3e4e_bg.wasm  web-sw-cor24-ocaml-2daf10620baecd13_bg.wasm  web-sw-cor24-ocaml-2fb582242109148f_bg.wasm  web-sw-cor24-ocaml-5e4b071fe52fc13b_bg.wasm  web-sw-cor24-ocaml-63c608fe63bd6c3e_bg.wasm  web-sw-cor24-ocaml-71100e0d04834b98_bg.wasm  web-sw-cor24-ocaml-7776a29f051a1e12.js  web-sw-cor24-ocaml-7776a29f051a1e12_bg.wasm  (+14 more)
src/: demos.rs  (+6 more)
(+184 files in other folders)
